--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ axum = "0.6"
 serde = "1.0.188"
 serde_derive = "1.0.188"
 serde_json = "1.0.105"
-sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres"] }
+sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "time", "macros"] }
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 leptos = { version = "0.4.10", features = ["ssr"] }
 anyhow = "1"
 dotenvy = "0.15.7"
-time = { version = "0.3", features = ["serde"]}
+time = { version = "0.3.28", features = ["serde", "parsing"]}
