--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rustls = "0.21"
-axum = "0.6"
+axum = { version = "0.6", features = ["form", "macros"]}
 serde = "1.0.188"
 serde_derive = "1.0.188"
 serde_json = "1.0.105"
