--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ leptos = { version = "0.4.10", features = ["ssr"] }
 anyhow = "1"
 dotenvy = "0.15.7"
 time = { version = "0.3.28", features = ["serde", "parsing"]}
+tower-http = { version = "0.4", features = ["fs"]}
+tower = { version = "0.4", features = ["full"] }
