--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 rustls = "0.21"
-axum = { version = "0.6", features = ["form", "macros"]}
+axum = { git = "https://github.com/tokio-rs/axum.git", features = ["form", "macros"]}
+axum-extra = { git = "https://github.com/tokio-rs/axum.git", features = ["typed-header"]}
 serde = "1.0.188"
 serde_derive = "1.0.188"
 serde_json = "1.0.105"
@@ -21,3 +22,5 @@ time = { version = "0.3.28", features = ["serde", "parsing"]}
 tower-http = { version = "0.4", features = ["fs"]}
 tower = { version = "0.4", features = ["full"] }
 mail-send = { version = "0.4" }
+jsonwebtoken = "8"
+once_cell = "1"
