--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ tower = { version = "0.4", features = ["full"] }
 mail-send = { version = "0.4" }
 jsonwebtoken = "8"
 once_cell = "1"
+rust-argon2 = "2.0"
