--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ tower = { version = "0.4", features = ["full"] }
 mail-send = { version = "0.4" }
 jsonwebtoken = "8"
 once_cell = "1"
-rust-argon2 = "2.0"
 headers = "0.3"
+bcrypt = "0.15"
